model interface for abstracting model file reading completely from drawables

--- a/CitySimulator.vcxproj
+++ b/CitySimulator.vcxproj
@@ -157,10 +157,12 @@
     <ClCompile Include="constant_buffer.cpp" />
     <ClCompile Include="diagnostics.cpp" />
     <ClCompile Include="drawable.cpp" />
+    <ClCompile Include="drawable_cars.cpp" />
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="entity_manager.cpp" />
     <ClCompile Include="logger.cpp" />
     <ClCompile Include="light_source.cpp" />
+    <ClCompile Include="model.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="persistence.cpp" />
     <ClCompile Include="pixel_shader.cpp" />
@@ -195,13 +197,16 @@
     <ClInclude Include="constant_buffer.h" />
     <ClInclude Include="diagnostics.h" />
     <ClInclude Include="drawable.h" />
+    <ClInclude Include="drawable_cars.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="entity_manager.h" />
     <ClInclude Include="external\SimpleMath.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="light_source.h" />
     <ClInclude Include="math.h" />
+    <ClInclude Include="model.h" />
     <ClInclude Include="object.h" />
+    <ClInclude Include="obj_file.h" />
     <ClInclude Include="persistence.h" />
     <ClInclude Include="pixel_shader.h" />
     <ClInclude Include="render_manager.h" />
